# hoohacks-memvis

./: CMakeLists.txt  README.md  function_analyzer.cpp
src/backend/: bench_init.c  bench_init.h  benchmark.c  benchmark.h  function_analyzer.cpp  heap_analyzer.c  init.c  logger.c  logger.h  now.h  real_heap_functions.h  stack.h  stack_analyzer.c  trace.h  trace_analyzer.c  tracer_state.h  wrap_state.h
src/frontend/: index.html  script.js
src/runner/: erics_runner.c  runner.c
tests/: fft-convolution.cpp  fun_trace2.c  function_trace_test.c  leaky.c  snake.c  test.cpp  testprog.c
